--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 
 ul {
     list-style-type: none;
-    color: #6f87c7;
+    color: #4b7afa;
     font-size: .9em;
 }
 
@@ -168,7 +168,7 @@ section{
 
 #post a{
     font-size: 1em !important;
-    color: #6f87c7;
+    color: #56b6ff;
 }
 
 .descrição{
