--- a/css/imersaoDev.css
+++ b/css/imersaoDev.css
@@ -2,6 +2,12 @@ a{
     font-size: 8pt;
 }
 
+body{
+    max-width: 100vw;
+    width: 100%;
+
+}
+
 #projetos{
     max-width: 100vw;
     width: 100%;
@@ -83,6 +89,7 @@ a{
 footer{
     width: 40vw;
     margin: 0 auto;
+    position: absolute;
 }
 
 @media screen and (max-width: 1125px) {
@@ -126,7 +133,12 @@ footer{
     }
 
     footer{
-        width: 98vw;
+        max-width: 100%;
+        width: 80%;
         margin: 0 auto;
+    }
+
+    ul, h5{
+        max-width: 300px;
     }
 }
